# stark-backend

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml  lints.yml
ci/scripts/: utils.sh
crates/stark-backend/: Cargo.toml
crates/stark-backend/src/: chip.rs  config.rs  engine.rs  lib.rs  rap.rs  sumcheck.rs  utils.rs
crates/stark-backend/src/air_builders/: mod.rs  prover.rs  sub.rs  verifier.rs
crates/stark-backend/src/air_builders/debug/: check_constraints.rs  mod.rs
crates/stark-backend/src/air_builders/symbolic/: dag.rs  mod.rs  symbolic_expression.rs  symbolic_variable.rs
crates/stark-backend/src/interaction/: debug.rs  fri_log_up.rs  mod.rs  rap.rs  stark_log_up.rs  utils.rs
crates/stark-backend/src/keygen/: mod.rs  types.rs  view.rs
crates/stark-backend/src/prover/: coordinator.rs  hal.rs  metrics.rs  mod.rs  opener.rs  trace.rs  types.rs
crates/stark-backend/src/prover/cpu/: mod.rs  opener.rs
crates/stark-backend/src/prover/cpu/quotient/: README.md  evaluator.rs  mod.rs  single.rs
crates/stark-backend/src/prover/quotient/: evaluator.rs  mod.rs  single.rs
crates/stark-backend/src/verifier/: constraints.rs  folder.rs  mod.rs
crates/stark-backend/tests/: integration_test.rs
crates/stark-backend/tests/cached_lookup/: instrumented.rs  mod.rs  prove.rs
crates/stark-backend/tests/fib_selector_air/: air.rs  columns.rs
crates/stark-backend/tests/fib_triples_air/: air.rs  columns.rs
crates/stark-backend/tests/interaction/: mod.rs
crates/stark-backend/tests/partitioned_sum_air/: air.rs  mod.rs
crates/stark-sdk/: Cargo.toml  bench.sh  profile.sh
crates/stark-sdk/examples/: compute_quotient_dag.rs  interactions.rs  keccakf.rs  profile.sh  prove_keccak_baby_bear_poseidon2.rs
crates/stark-sdk/src/: cost_estimate.rs  engine.rs  lib.rs  utils.rs
crates/stark-sdk/src/bench/: mod.rs
crates/stark-sdk/src/config/: baby_bear_blake3.rs  baby_bear_bytehash.rs  baby_bear_keccak.rs  baby_bear_poseidon2.rs  baby_bear_poseidon2_root.rs  fri_params.rs  goldilocks_poseidon.rs  log_up_params.rs  mod.rs
crates/stark-sdk/src/dummy_airs/fib_air/: air.rs  chip.rs  columns.rs
crates/stark-sdk/src/dummy_airs/interaction/: dummy_interaction_air.rs  mod.rs
docs/: README.md  interactions.md  metrics.md  stark-backend.md
