[package]
name = "openvm-stark-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SDK for production and testing usage of STARKs."

[dependencies]
openvm-stark-backend = { workspace = true }

p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-fri = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-poseidon = { workspace = true }
p3-symmetric = { workspace = true }
p3-blake3 = { workspace = true }
p3-keccak = { workspace = true }
zkhash = { workspace = true }
ff = { workspace = true }
itertools.workspace = true
tracing.workspace = true
derivative.workspace = true
serde = { workspace = true, features = ["alloc"] }
rand.workspace = true
metrics.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
toml = "0.8.14"
derive_more = "0.99.18"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
metrics-tracing-context = "0.16.0"
metrics-util = "0.17.0"

[features]
default = ["parallel"]
parallel = ["openvm-stark-backend/parallel"]
nightly-features = [
    "p3-dft/nightly-features",
    "p3-keccak/nightly-features",
    "p3-poseidon2/nightly-features",
]
